Reduce subscribe form font size to prevent clipping on mobile

--- a/src/scss/components/_subscribe.scss
+++ b/src/scss/components/_subscribe.scss
@@ -37,9 +37,9 @@
                 appearance: none;
                 height: 44px;
                 border: none;
-                font-size: 16px;
+                font-size: 14px;
                 font-family: inherit;
-                letter-spacing: 1px;
+                letter-spacing: 0.5px;
                 box-sizing: border-box;
             }
 
@@ -67,6 +67,7 @@
             }
 
             input:focus {
+                font-size: 16px;
                 outline: 2px solid #E86C8D;
                 box-shadow: 0 0 2px #E86C8D;
             }
